--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /134
-title: "React Hebdo #134: ..."
+title: "React Hebdo #134: Gatsby, React DOM for Native, XState, Flashlight, re-renders, Custom Hooks, Ignite Cookbook..."
 authors: [slorber]
 date: 02-07-2023
 image: /img/TWIR_POST.png
@@ -114,9 +114,9 @@ La [RFC](https://github.com/react-native-community/discussions-and-proposals/pul
 ---
 
 - 📜 [How to swap between React Native Storybook and your app](https://dev.to/dannyhw/how-to-swap-between-react-native-storybook-and-your-app-p3o): technique utile pour ceux qui ont un Storybook React-Native. Perso j'aime carrément avoir une barre de menu en dev avec des boutons qui permettent d'ouvrir/fermer le Storybook, changer d'environnement API ou autre... Ça fait gagner beaucoup de temps sur le long terme de se créer sa propre DX.
+- 📦 [Flashlight.dev](https://flashlight.dev/): Flashlight est un nouveau service qui veut devenir le Lighthouse du mobile, accompagnée d'une offre Flashlight Cloud. Projet anciennement nommé [Android-Performance-Profiler](https://twitter.com/almouro/status/1622588283740880897).
 - 📖 [Ignite Cookbook for React Native](https://twitter.com/ir_ignite/status/1621202420704620544): liste de recettes React-Native.
 - 🎨 [SolidJS + NativeScript demo running React-Native-WebView](https://twitter.com/ammarahm_ed/status/1622259723729764354): la promesse d'Open Native est intéressante pour la portabilité du code natif.
-- 🐦 [Android-Performance-Profiler becomes Flashlight](https://twitter.com/almouro/status/1622588283740880897) + [Flashlight.dev](https://flashlight.dev/): Flashlight Cloud est un nouveau service qui veut devenir le Lighthouse pour mobile.
 - 👀 [The White House calls for more interoperability between mobile platforms](https://twitter.com/JI/status/1620948253381632000)
 - 🎙️ [React-Native-Radio 258 - AI Robots coding React Native?!](https://reactnativeradio.com/episodes/r258-robots-coding-react-native)
 
@@ -146,12 +146,10 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-- [ES2023, Netlify achète Gatsby, VSCode v1.75 - Actus de la semaine en JS](https://www.youtube.com/watch?v=-DWyB-D52FI)
-- [Diagnostic et résolution de problèmes de performance d'une application web (front et back)](https://www.youtube.com/watch?v=BEy1nYL67GA)
+- 🎥 [ES2023, Netlify achète Gatsby, VSCode v1.75 - Actus de la semaine en JS](https://www.youtube.com/watch?v=-DWyB-D52FI)
+- 🎥 [Diagnostic et résolution de problèmes de performance d'une application web (front et back)](https://www.youtube.com/watch?v=BEy1nYL67GA)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
