--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/134/index.mdx
@@ -52,7 +52,7 @@ Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Il
 
 C'est la grosse nouvelle de la semaine. Gatsby Inc. racheté par Netlify. Le framework Gatsby passe donc également sous la gouverne de Netlify au coté d'Eleventy et SolidJS et continuera d'évoluer. Les features de Gatsby Cloud (notamment le [Valhalla Content Hub](https://www.gatsbyjs.com/products/valhalla-content-hub/)) seront intégrés aux offres de Netlify. Le nouveau mot d'ordre est "composable architecture". Gatsby n'est pas l'outil le plus populaire actuellement, mais je trouve que cette acquisition à du sens, en particulier pour le content hub et toutes les intégrations CMS sur lesquelles ils ont travaillé. L'offre Gatsby Cloud est plus difficile à faire adopter que des features payantes en option sur Netlify, et c'est encore plus vrai pour les sites qui n'utilisent pas le framework Gatsby.
 
-À lire également:
+À voir également:
 
 - 📜 [Gatsby is joining Netlify](https://www.gatsbyjs.com/blog/gatsby-is-joining-netlify/)
 - 📜 [Netlify Acquires Gatsby, Its Struggling Jamstack Competitor](https://thenewstack.io/netlify-acquires-gatsby-its-struggling-jamstack-competitor/)
@@ -154,7 +154,7 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🔀 Autre {#other}
 
-- [Updates from the 94th TC39 meeting](https://dev.to/hemanth/updates-from-the-94th-tc39-meeting-48mb): liste finalisée des propositions qui passent au stage. Particulièrement excité par AsnycContext, Change array by Copy et Symbols as WeakMap keys (nécessaire pour Records & Tuples).
+- [Updates from the 94th TC39 meeting](https://dev.to/hemanth/updates-from-the-94th-tc39-meeting-48mb): liste finalisée des propositions qui passent au stage. Particulièrement excité par [AsyncContext](https://twitter.com/sebastienlorber/status/1620391460679065601), Change array by Copy et Symbols as WeakMap keys (nécessaire pour [Records & Tuples](https://sebastienlorber.com/records-and-tuples-for-react)).
 - [Deno - The Future (and the Past) of the Web is Server Side Rendering](https://deno.com/blog/the-future-and-past-is-server-side-rendering)
 - [WebKit - Pushing Interop Forward in 2023](https://webkit.org/blog/13706/interop-2023/) + [Chrome - Interop 2023: continuing to improve the web for developers](https://web.dev/interop-2023/)
 - [Understanding monomorphism can improve your JavaScript performance 60x](https://twitter.com/mhevery/status/1622499229813047296)
