--- a/website/newsletter/134/index.mdx
+++ b/website/newsletter/134/index.mdx
@@ -159,7 +159,7 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 ## 🤭 Fun {#fun}
 
-Savage 😅 why is he so mean.
+Savage 😅 why is he so mean!
 
 [![alt](/emails/issues/134/meme.png)](https://twitter.com/ThePrimeagen/status/1620827474681827333)
 
