--- a/website/i18n/fr/docusaurus-plugin-content-pages/workflow/thanks-for-subscribing.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-pages/workflow/thanks-for-subscribing.mdx
@@ -1,9 +1,13 @@
 # Merci pour ton abonnement !
 
+import SignupConfirmationCall from "@site/src/components/SignupConfirmationCall";
+
+<SignupConfirmationCall />
+
 Tu vas bientôt recevoir mes e-mails React !
 
 En attendant, tu peux jeter un coup d'oeil ici :
 
 - les [articles](/articles)
-- les [anciennes éditions de la newsletter ](/newsletter)
+- les [dernières éditions de la newsletter ](/newsletter)
 - le [dernier thread Twitter](https://slo.im/thread)
