--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-CFP RNC!
+CFP RNC! https://twitter.com/sebastienlorber/status/1626587314599391234
 
 3 ans
 
@@ -47,7 +47,38 @@ Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Il
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Announcing Sandpack 2.0 and a Node.js runtime for any browser](https://codesandbox.io/blog/announcing-sandpack-2)
+
+https://twitter.com/codesandbox/status/1626304039251062785
+
+---
+
+[useSignal() is the Future of Web Frameworks](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)
+
+https://twitter.com/mhevery/status/1626269387438305280
+
+https://twitter.com/acdlite/status/1626590880126889984
+
+https://twitter.com/jordwalke/status/1626718819443150849
+
+https://twitter.com/jordwalke/status/1626718819443150849
+
+- [Angular Reactivity with Signals](https://github.com/angular/angular/discussions/49090) + https://twitter.com/angular/status/1625939902046117890
+
+---
+
+[React PR - Enable passing Server References from Server to Client](https://github.com/facebook/react/pull/26124) + https://twitter.com/wongmjane/status/1625166863062958081
+
+---
+
+- [TanStack Start](https://tanstack.com/) + https://twitter.com/search?q=%22tanstack%20start%22&src=typed_query + https://twitter.com/JLarky/status/1627855828530393088
+- [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/)
+- [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k)
+- [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072)
+- ["JSX could have been 2x faster if it was designed more optimally for JS VMs!"](https://twitter.com/mhevery/status/1626422858862960648)
+- [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058)
+- [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): Tailwind
+- [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
 
 <SubscribeFormEmbed />
 
@@ -67,7 +98,11 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
+- [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
+- [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
+- [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
+- [@expo/html-elements@0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
 
 ---
 
@@ -95,7 +130,7 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [React Query rend ton Code 200% Plus Simple](https://www.youtube.com/watch?v=3jlBocCieVU)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -105,13 +140,26 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [WebContainer API is here](https://blog.stackblitz.com/posts/webcontainer-api-is-here/) + https://twitter.com/stackblitz/status/1625552724547993600
+- [Web Push for Web Apps on iOS and iPadOS](https://webkit.org/blog/13878/web-push-for-web-apps-on-ios-and-ipados/)
+- [WebKit - Try out CSS Nesting today](https://webkit.org/blog/13813/try-css-nesting-today-in-safari-technology-preview/)
+- [Container queries land in stable browsers](https://web.dev/cq-stable/)
+- [TypeScript Course - Build a TypeScript Project From Scratch (free)](https://www.typescriptcourse.com/tutorials/build-a-typescript-project-from-scratch)
+- [HOTScript - Higher-Order TypeScript](https://github.com/gvergnaud/hotscript)
+- [Understanding Monomorphism to Improve Your JS Performance Up to 60x](https://www.builder.io/blog/monomorphic-javascript)
+- [Vercel Cron Jobs](https://twitter.com/leeerob/status/1625249090932994051)
+- [Declarative Shadow DOM](https://webkit.org/blog/13851/declarative-shadow-dom/)
+- [https://surma.dev/things/rust-to-webassembly/](https://surma.dev/things/rust-to-webassembly/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/t3dotgg/status/1626393874393595907
+
+https://twitter.com/trashh_dev/status/1626598810528141313
+
+https://twitter.com/StackOverflow/status/1625178109615149056
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
 
