--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -71,6 +71,9 @@ https://twitter.com/jordwalke/status/1626718819443150849
 
 ---
 
+- [Improved type safety in Storybook 7](https://storybook.js.org/blog/improved-type-safety-in-storybook-7/)
+- [Hydrogen v2 is Remixed](https://twitter.com/remix_run/status/1623744656701026306)
+- [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary)
 - [TanStack Start](https://tanstack.com/) + https://twitter.com/search?q=%22tanstack%20start%22&src=typed_query + https://twitter.com/JLarky/status/1627855828530393088
 - [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/)
 - [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k)
@@ -79,6 +82,7 @@ https://twitter.com/jordwalke/status/1626718819443150849
 - [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058)
 - [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): Tailwind
 - [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
+- [Fireship - 7 better ways to create a React app](https://www.youtube.com/watch?app=desktop&v=2OTq15A5s0Y)
 
 <SubscribeFormEmbed />
 
@@ -98,11 +102,18 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
+[Expo SDK 48 beta is now available](https://blog.expo.dev/expo-sdk-48-beta-is-now-available-7ee5713d0937)
+
+---
+
+- [Expo Changelog: January 2023](https://blog.expo.dev/expo-changelog-january-2023-c5eab76df08)
+- [Expo - Sunsetting “expo publish” and Classic Updates](https://blog.expo.dev/sunsetting-expo-publish-and-classic-updates-6cb9cd295378)
 - [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
 - [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
 - [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
 - [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
 - [@expo/html-elements@0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
+- [React-Native-MKKV 2.7.0 - fastWrites prop](https://twitter.com/mrousavy/status/1625059908927234048)
 
 ---
 
@@ -145,11 +156,13 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 - [WebKit - Try out CSS Nesting today](https://webkit.org/blog/13813/try-css-nesting-today-in-safari-technology-preview/)
 - [Container queries land in stable browsers](https://web.dev/cq-stable/)
 - [TypeScript Course - Build a TypeScript Project From Scratch (free)](https://www.typescriptcourse.com/tutorials/build-a-typescript-project-from-scratch)
-- [HOTScript - Higher-Order TypeScript](https://github.com/gvergnaud/hotscript)
+- [HOTScript - Higher-Order TypeScript](https://github.com/gvergnaud/hotscript) + https://twitter.com/GabrielVergnaud/status/1624838833941381122
 - [Understanding Monomorphism to Improve Your JS Performance Up to 60x](https://www.builder.io/blog/monomorphic-javascript)
 - [Vercel Cron Jobs](https://twitter.com/leeerob/status/1625249090932994051)
 - [Declarative Shadow DOM](https://webkit.org/blog/13851/declarative-shadow-dom/)
-- [https://surma.dev/things/rust-to-webassembly/](https://surma.dev/things/rust-to-webassembly/)
+- [Rust to WebAssembly the hard way](https://surma.dev/things/rust-to-webassembly/)
+- [Lighthouse 10.0](https://developer.chrome.com/blog/lighthouse-10-0/)
+- [Safari Technology Preview 163](https://webkit.org/blog/13839/release-notes-for-safari-technology-preview-163/)
 
 ---
 
