--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -53,6 +53,10 @@ https://twitter.com/codesandbox/status/1626304039251062785
 
 ---
 
+[The Power of Keys in Framer Motion](https://www.nan.fyi/keys-in-framer-motion)
+
+---
+
 [useSignal() is the Future of Web Frameworks](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)
 
 https://twitter.com/mhevery/status/1626269387438305280
@@ -71,6 +75,23 @@ https://twitter.com/jordwalke/status/1626718819443150849
 
 ---
 
+[Leveraging Server Context for Advanced Next.js Optimization Patterns](https://prismic.io/blog/advanced-nextjs-server-context)
+
+---
+
+- [Effective Higher-Order Components](https://www.bbss.dev/posts/effective-hocs/)
+- [OSS Feature Decision Tree](https://tkdodo.eu/blog/oss-feature-decision-tree): Dominik explique comment il décide si une feature request sera intégrée ou non à React-Query. Une manière de penser qui rappelle le fameux [Extensible Web Manifesto](https://twitter.com/sebastienlorber/status/1627637410438815744).
+- [Detecting Nested Components in React with the Context API](https://www.aleksandrhovhannisyan.com/blog/react-context-nested-components/)
+- [Maximising performance with React code splitting techniques](https://edvins.io/react-code-splitting-techniques)
+- [How to handle errors in React](https://www.developerway.com/posts/how-to-handle-errors-in-react)
+- [Modularizing React Applications with Established UI Patterns](https://martinfowler.com/articles/modularizing-react-apps.html)
+- [A Historical Reference of React Criticism](https://www.zachleat.com/web/react-criticism/)
+- [A minimal, multi-framework, responsive image component](https://dev.to/ascorbic/a-minimal-multi-framework-responsive-image-component-3iop)
+- [The case for frameworks](https://seldo.com/posts/the_case_for_frameworks)
+- [Using WebSockets in a Redux Application](https://www.taniarascia.com/websockets-in-redux/)
+- [Migrating to Modern Redux](https://redux.js.org/usage/migrating-to-modern-redux): nouvelle page de doc
+- [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439)
+- [How to Integrate GreenSock with Remotion](https://enlear.academy/how-to-integrate-greensock-with-remotion-e4eee6f5a41f)
 - [Improved type safety in Storybook 7](https://storybook.js.org/blog/improved-type-safety-in-storybook-7/)
 - [Hydrogen v2 is Remixed](https://twitter.com/remix_run/status/1623744656701026306)
 - [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary)
@@ -83,6 +104,12 @@ https://twitter.com/jordwalke/status/1626718819443150849
 - [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): Tailwind
 - [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
 - [Fireship - 7 better ways to create a React app](https://www.youtube.com/watch?app=desktop&v=2OTq15A5s0Y)
+- [Killing ReactJS - A Guide For Hopeful Frameworks](https://www.youtube.com/watch?v=LMUKsAf2Rfs)
+- [What Netlify's Acquisition of Gatsby Really Means](https://remotesynthesis.com/blog/gatsby-plus-netlify/)
+- [Unovis - modular data visualization framework for React, Angular, Svelte...](https://unovis.dev/)
+- [Redwood 4.1](https://github.com/redwoodjs/redwood/releases/tag/v4.1.0)
+- [React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)
+- [MDX 2.3](https://github.com/mdx-js/mdx/releases/tag/2.3.0): nouvelles options du compiler pour le support d'autres frameworks que React
 
 <SubscribeFormEmbed />
 
@@ -104,8 +131,12 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 [Expo SDK 48 beta is now available](https://blog.expo.dev/expo-sdk-48-beta-is-now-available-7ee5713d0937)
 
+https://twitter.com/Baconbrix/status/1623803911290118144
+
 ---
 
+- [Sebastian Markbåge about Server Components: "one of the reasons it was even funded by Meta initially was because of the promise it saw using server-driven technologies on _native_"](https://twitter.com/sebmarkbage/status/1623175042971344896)
+- [State of React-Native 2022](https://results.stateofreactnative.com/): résultats du sondage disponibles.
 - [Expo Changelog: January 2023](https://blog.expo.dev/expo-changelog-january-2023-c5eab76df08)
 - [Expo - Sunsetting “expo publish” and Classic Updates](https://blog.expo.dev/sunsetting-expo-publish-and-classic-updates-6cb9cd295378)
 - [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
@@ -114,6 +145,9 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 - [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
 - [@expo/html-elements@0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
 - [React-Native-MKKV 2.7.0 - fastWrites prop](https://twitter.com/mrousavy/status/1625059908927234048)
+- [React-Native-Skia - Headless Support](https://twitter.com/wcandillon/status/1622558366940778496)
+- [React Native at STRV in 2023](https://www.aronberezkin.com/posts/react-native-at-strv-in-2023)
+- [How to use React Native Web with Storybook v7 beta](https://dev.to/dannyhw/how-to-use-react-native-web-with-storybook-v7-beta-1io7)
 
 ---
 
@@ -141,6 +175,7 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
+- [React-Native-Paris - talks du 8 Février](https://www.youtube.com/playlist?list=PLZsRQnRG-mlJiCuv9q1nBkxaYP9AIl_Rn): 2 vidéos, sourcemaps et react-native-testing-library
 - [React Query rend ton Code 200% Plus Simple](https://www.youtube.com/watch?v=3jlBocCieVU)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
@@ -151,6 +186,8 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🔀 Autre {#other}
 
+- [ts-reset](https://github.com/total-typescript/ts-reset): idée intéressante, sorte de CSS reset pour TypeScript qui patch certaines parties pénibles. Par exemple, `.filter(Boolean)` devient un type-guard.
+- [rspack](https://www.npmjs.com/package/@rspack/core) + [oxc](https://github.com/Boshen/oxc): des devs ByteDance (TikTok) travaillent sur de nouveaux outils Rust, équivalent de Webpack/Babel
 - [WebContainer API is here](https://blog.stackblitz.com/posts/webcontainer-api-is-here/) + https://twitter.com/stackblitz/status/1625552724547993600
 - [Web Push for Web Apps on iOS and iPadOS](https://webkit.org/blog/13878/web-push-for-web-apps-on-ios-and-ipados/)
 - [WebKit - Try out CSS Nesting today](https://webkit.org/blog/13813/try-css-nesting-today-in-safari-technology-preview/)
@@ -163,6 +200,8 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 - [Rust to WebAssembly the hard way](https://surma.dev/things/rust-to-webassembly/)
 - [Lighthouse 10.0](https://developer.chrome.com/blog/lighthouse-10-0/)
 - [Safari Technology Preview 163](https://webkit.org/blog/13839/release-notes-for-safari-technology-preview-163/)
+- [Bringing Javascript to WebAssembly for Shopify Functions](https://shopify.engineering/javascript-in-webassembly-for-shopify-functions)
+- [How Deno’s Founder Is Rebuilding the Runtime of the Web](https://www.sequoiacap.com/article/deno-spotlight/)
 
 ---
 
