--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -67,7 +67,7 @@ https://twitter.com/jordwalke/status/1626718819443150849
 
 https://twitter.com/jordwalke/status/1626718819443150849
 
-- [Angular Reactivity with Signals](https://github.com/angular/angular/discussions/49090) + https://twitter.com/angular/status/1625939902046117890
+- [Angular Reactivity with Signals](https://github.com/angular/angular/discussions/49090) + https://twitter.com/angular/status/1625939902046117890 + https://twitter.com/sarah_edo/status/1628065696247857152
 
 ---
 
@@ -148,6 +148,7 @@ https://twitter.com/Baconbrix/status/1623803911290118144
 - [React-Native-Skia - Headless Support](https://twitter.com/wcandillon/status/1622558366940778496)
 - [React Native at STRV in 2023](https://www.aronberezkin.com/posts/react-native-at-strv-in-2023)
 - [How to use React Native Web with Storybook v7 beta](https://dev.to/dannyhw/how-to-use-react-native-web-with-storybook-v7-beta-1io7)
+- [expo-github-action v8](https://twitter.com/cedricvanputten/status/1627732937008349186)
 
 ---
 
