--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -71,45 +71,44 @@ https://twitter.com/jordwalke/status/1626718819443150849
 
 ---
 
-[React PR - Enable passing Server References from Server to Client](https://github.com/facebook/react/pull/26124) + https://twitter.com/wongmjane/status/1625166863062958081
-
 ---
 
 [Leveraging Server Context for Advanced Next.js Optimization Patterns](https://prismic.io/blog/advanced-nextjs-server-context)
 
 ---
 
-- [Effective Higher-Order Components](https://www.bbss.dev/posts/effective-hocs/)
-- [OSS Feature Decision Tree](https://tkdodo.eu/blog/oss-feature-decision-tree): Dominik explique comment il décide si une feature request sera intégrée ou non à React-Query. Une manière de penser qui rappelle le fameux [Extensible Web Manifesto](https://twitter.com/sebastienlorber/status/1627637410438815744).
-- [Detecting Nested Components in React with the Context API](https://www.aleksandrhovhannisyan.com/blog/react-context-nested-components/)
-- [Maximising performance with React code splitting techniques](https://edvins.io/react-code-splitting-techniques)
-- [How to handle errors in React](https://www.developerway.com/posts/how-to-handle-errors-in-react)
-- [Modularizing React Applications with Established UI Patterns](https://martinfowler.com/articles/modularizing-react-apps.html)
-- [A Historical Reference of React Criticism](https://www.zachleat.com/web/react-criticism/)
-- [A minimal, multi-framework, responsive image component](https://dev.to/ascorbic/a-minimal-multi-framework-responsive-image-component-3iop)
-- [The case for frameworks](https://seldo.com/posts/the_case_for_frameworks)
-- [Using WebSockets in a Redux Application](https://www.taniarascia.com/websockets-in-redux/)
-- [Migrating to Modern Redux](https://redux.js.org/usage/migrating-to-modern-redux): nouvelle page de doc
-- [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439)
-- [How to Integrate GreenSock with Remotion](https://enlear.academy/how-to-integrate-greensock-with-remotion-e4eee6f5a41f)
-- [Improved type safety in Storybook 7](https://storybook.js.org/blog/improved-type-safety-in-storybook-7/)
-- [Hydrogen v2 is Remixed](https://twitter.com/remix_run/status/1623744656701026306)
-- [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary)
-- [TanStack Start](https://tanstack.com/) + https://twitter.com/search?q=%22tanstack%20start%22&src=typed_query + https://twitter.com/JLarky/status/1627855828530393088
-- [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/)
-- [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k)
-- [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072)
-- ["JSX could have been 2x faster if it was designed more optimally for JS VMs!"](https://twitter.com/mhevery/status/1626422858862960648)
-- [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058)
-- [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): Tailwind
-- [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
-- [Fireship - 7 better ways to create a React app](https://www.youtube.com/watch?app=desktop&v=2OTq15A5s0Y)
-- [Killing ReactJS - A Guide For Hopeful Frameworks](https://www.youtube.com/watch?v=LMUKsAf2Rfs)
-- [What Netlify's Acquisition of Gatsby Really Means](https://remotesynthesis.com/blog/gatsby-plus-netlify/)
-- [Unovis - modular data visualization framework for React, Angular, Svelte...](https://unovis.dev/)
-- [Redwood 4.1](https://github.com/redwoodjs/redwood/releases/tag/v4.1.0)
-- [React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)
-- [MDX 2.3](https://github.com/mdx-js/mdx/releases/tag/2.3.0): nouvelles options du compiler pour le support d'autres frameworks que React
+- 🐦 [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439)
+- 👀 [React PR - Enable passing Server References from Server to Client](https://github.com/facebook/react/pull/26124): une PR intéressante qui permet aux composants client d'appeler des callbacks serveur, dans la tendance RPC actuelle.
+- 👀 [TanStack Start](https://twitter.com/sebastienlorber/status/1627740526551175190): nouveau meta-framework React en cours de dev?
+- 👀 [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072)
+- 👀 [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058)
+- 🧵 ["JSX could have been 2x faster if it was designed more optimally for JS VMs!"](https://twitter.com/mhevery/status/1626422858862960648)
+- 🧵 [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
+- 📖 [Migrating to Modern Redux](https://redux.js.org/usage/migrating-to-modern-redux): nouvelle doc
+- 📜 [Effective Higher-Order Components](https://www.bbss.dev/posts/effective-hocs/)
+- 📜 [OSS Feature Decision Tree](https://tkdodo.eu/blog/oss-feature-decision-tree): Dominik explique comment il décide si une feature request sera intégrée ou non à React-Query. Une manière de penser qui rappelle le fameux [Extensible Web Manifesto](https://twitter.com/sebastienlorber/status/1627637410438815744).
+- 📜 [Detecting Nested Components in React with the Context API](https://www.aleksandrhovhannisyan.com/blog/react-context-nested-components/)
+- 📜 [Maximising performance with React code splitting techniques](https://edvins.io/react-code-splitting-techniques)
+- 📜 [How to handle errors in React](https://www.developerway.com/posts/how-to-handle-errors-in-react)
+- 📜 [Modularizing React Applications with Established UI Patterns](https://martinfowler.com/articles/modularizing-react-apps.html)
+- 📜 [A Historical Reference of React Criticism](https://www.zachleat.com/web/react-criticism/)
+- 📜 [A minimal, multi-framework, responsive image component](https://dev.to/ascorbic/a-minimal-multi-framework-responsive-image-component-3iop)
+- 📜 [The case for frameworks](https://seldo.com/posts/the_case_for_frameworks)
+- 📜 [Using WebSockets in a Redux Application](https://www.taniarascia.com/websockets-in-redux/)
+- 📜 [How to Integrate GreenSock with Remotion](https://enlear.academy/how-to-integrate-greensock-with-remotion-e4eee6f5a41f)
+- 📜 [Improved type safety in Storybook 7](https://storybook.js.org/blog/improved-type-safety-in-storybook-7/)
+- 📜 [Hydrogen v2 is Remixed](https://twitter.com/remix_run/status/1623744656701026306)
+- 📜 [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary)
+- 📜 [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/)
+- 📜 [What Netlify's Acquisition of Gatsby Really Means](https://remotesynthesis.com/blog/gatsby-plus-netlify/)
+- 🎥 [React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)
+- 🎥 [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k)
+- 🎥 [Fireship - 7 better ways to create a React app](https://www.youtube.com/watch?app=desktop&v=2OTq15A5s0Y)
+- 🎥 [Killing ReactJS - A Guide For Hopeful Frameworks](https://www.youtube.com/watch?v=LMUKsAf2Rfs)
+- 📦 [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): support Tailwind
+- 📦 [MDX 2.3](https://github.com/mdx-js/mdx/releases/tag/2.3.0): nouvelles options du compiler pour le support d'autres frameworks que React
+- 📦 [Unovis - modular data visualization framework for React, Angular, Svelte...](https://unovis.dev/)
+- 📦 [Redwood 4.1](https://github.com/redwoodjs/redwood/releases/tag/v4.1.0)
 
 <SubscribeFormEmbed />
 
@@ -135,20 +134,20 @@ https://twitter.com/Baconbrix/status/1623803911290118144
 
 ---
 
-- [Sebastian Markbåge about Server Components: "one of the reasons it was even funded by Meta initially was because of the promise it saw using server-driven technologies on _native_"](https://twitter.com/sebmarkbage/status/1623175042971344896)
-- [State of React-Native 2022](https://results.stateofreactnative.com/): résultats du sondage disponibles.
-- [Expo Changelog: January 2023](https://blog.expo.dev/expo-changelog-january-2023-c5eab76df08)
-- [Expo - Sunsetting “expo publish” and Classic Updates](https://blog.expo.dev/sunsetting-expo-publish-and-classic-updates-6cb9cd295378)
-- [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
-- [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
-- [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
-- [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
-- [@expo/html-elements@0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
-- [React-Native-MKKV 2.7.0 - fastWrites prop](https://twitter.com/mrousavy/status/1625059908927234048)
-- [React-Native-Skia - Headless Support](https://twitter.com/wcandillon/status/1622558366940778496)
-- [React Native at STRV in 2023](https://www.aronberezkin.com/posts/react-native-at-strv-in-2023)
-- [How to use React Native Web with Storybook v7 beta](https://dev.to/dannyhw/how-to-use-react-native-web-with-storybook-v7-beta-1io7)
-- [expo-github-action v8](https://twitter.com/cedricvanputten/status/1627732937008349186)
+- 🐦 [Sebastian Markbåge about Server Components: "one of the reasons it was even funded by Meta initially was because of the promise it saw using server-driven technologies on native"](https://twitter.com/sebmarkbage/status/1623175042971344896): les React-Native Server Components ont bien un intérêt. Expo est sans doute le mieux placé pour les implémenter.
+- 📊 [State of React-Native 2022](https://results.stateofreactnative.com/): les résultats du sondage sont disponibles.
+- 📜 [Expo Changelog: January 2023](https://blog.expo.dev/expo-changelog-january-2023-c5eab76df08)
+- 📜 [Expo - Sunsetting “expo publish” and Classic Updates](https://blog.expo.dev/sunsetting-expo-publish-and-classic-updates-6cb9cd295378)
+- 👀 [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
+- 💬 [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
+- 🐦 [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
+- 🎙️ [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
+- 📦 [@expo/html-elements@0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
+- 📦 [React-Native-MKKV 2.7.0 - fastWrites prop](https://twitter.com/mrousavy/status/1625059908927234048)
+- 📦 React-Native-Skia - [Headless Support](https://twitter.com/wcandillon/status/1622558366940778496) + [Web-only support](https://github.com/Shopify/react-native-skia/pull/1336): la librairie est en train de devenir plus "universelle".
+- 📦 [expo-github-action v8](https://twitter.com/cedricvanputten/status/1627732937008349186)
+- 📜 [React Native at STRV in 2023](https://www.aronberezkin.com/posts/react-native-at-strv-in-2023)
+- 📜 [How to use React Native Web with Storybook v7 beta](https://dev.to/dannyhw/how-to-use-react-native-web-with-storybook-v7-beta-1io7)
 
 ---
 
